--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <title>Document</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
@@ -63,13 +64,13 @@
                 </div>
             </div>
 
-            <div>
+            <div class="imagenCompu">
                 <img src="assets/feature-1.png" alt="">
             </div>
         </div>
 
         <div class="container3">
-            <div><img src="assets/feature-2.png" alt=""></div>
+            <div class="imagenTablec"><img src="assets/feature-2.png" alt=""></div>
             <div class="container2Div">
                 <h2>Safe and reliable</h2>
                 <p>Dou suas detracto maiestatic ad, commodo lucilius invenire nec ad,<br>eum et oratio disputationi.Falli lobortis his ad</p>
@@ -102,7 +103,7 @@
                 </ul>
             </div>
             <div>
-                <button class="botton1">Get Free</button>
+                <button class="botton1" >Get Free</button>
             </div>
                 
         </div>
@@ -122,7 +123,7 @@
                 </ul>
             </div>
             <div>
-                <button class="botton1">Get Free</button>
+                <button class="botton1" id="bottonVerde">Get Free</button>
             </div>
                 
             </div>
@@ -143,7 +144,7 @@
                 </ul>
             </div>
             <div>
-                <button class="botton1">Get Free</button>
+                <button class="botton1" >Get Free</button>
             </div>
             </div>
         </div>
@@ -151,8 +152,8 @@
 
 </section>
 
-<section>
-    <div>
+<section class="seccion_imagenes">
+    <div class="imagenesDiv">
         <img src="assets/client-1.png" alt="">
         <img src="assets/client-2.png" alt="">
         <img src="assets/client-3.png" alt="">
@@ -162,40 +163,47 @@
     </div>
 
 </section>
-   <section>
-        <div>
-            <div>
+   <section class="seccion4">
+        <div class="seccion4Div">
+            <div class="divSecc">
                 <h2>Contact Us</h2>
-                <p>Te iisque labitur eos, nec sale argumentum scribentur, augue disputando in vim. Erat fugit sit at, ius lorem.
-                Email: company_email@com
-                Phone: 361-688-5824
-                Address: 4826 White Avenue, Corpus Christi, Texas</p>
+                <p>Te iisque labitur eos, nec sale argumentum scribentur, <br> augue disputando in vim.  Erat fugit sit at, ius lorem. <br>
+                <br>Email: company_email@com
+                <br>Phone: 361-688-5824
+                <br>Address: 4826 White Avenue, Corpus Christi, Texas</p>
             </div>
-            <div>
-                <div>
-                    <div>
-                        <label for="">Your Name</label>
-                        <input type="text">
+            <div class="divSecc2">
+                <div class="formulario1">
+                    <div class="formulario">
+                        <label for="" class="letraVerde">Your Name</label>
+                        <input type="text" id="borde2" class="campoFormulario">
                     </div>
-                    <div>
-                        <label for="">Your Email</label>
-                        <input type="email" name="" id="">
+                    <div class="formulario">
+                        <label for="" class="letraVerde">Your Email</label>
+                        <input type="email" name="" id="borde1" class="campoFormulario" >
                     </div>
                 </div>
-                <div>
-                    <label for="">Message</label>
-                    <input type="text">
+                <div class="formulario">
+                    <label for="" class="letraVerde">Message</label>
+                    <input type="text" class="campoFormularioGrande">
                 </div>
-                <a href="">Submit</a>
+                <a href="" class="buttomVerde">Submit</a>
             </div>
         </div>
    </section>
 
-   <footer>
-        <p>Copyright © 2018 Chen, Yi-Ya</p>
-        <div>
-
+   <footer class="footer">
+        <div class="texto-footer">
+            <p>Copyright &copy; 2018 Chen, Yi-Ya.</p>
         </div>
-   </footer>
+        <div class="iconos-footer">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fas fa-envelope"></i></a>
+            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+        </div>
+    </footer>
 </body>
 </html> 
+
+
